# user-daemon

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  daemon.c  daemon.h  main.c  version.h
src/service/: guise.service  userd.service
